samples/_failures_safe/1761627303_1840b9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2640a21c.c: In function ‘main’:
./samples/SAFE/__tmp_2640a21c.c:158:9: error: expected declaration or statement at end of input
  158 |         if (sm.current_state == STATE_IDLE) {
      |         ^~
./samples/SAFE/__tmp_2640a21c.c:158:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2640a21c.c:158:9: error: expected declaration or statement at end of input
